--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -42,11 +42,11 @@
 			<div class="page_top_hook">Batteries included.</div>
 			<p>Our pricing is based on a radical concept: <i>we want to help you grow</i>.  </p>
 
-			<p>Other companies watch you bringing in a new staff member and see dollar signs.  We cheer. </p>
+			<p>Other companies watch you bringing in a new staff member and see dollar signs.  We see you succeeding, and cheer. </p>
 
 			<p>Other services see you reaching more donors and volunteers, and see dollar signs. We say, "Add some more!"  We've built a <a href="{% url marketing_site:about_us %}">sustainable business that we love</a> on those $50 a month - and we're happy with that.  What we really want is a better world, and you're the key to making that happen.  You have our full support.</p>
 
-			<p>Here's some of the unlimited you only get at GoodCloud:
+			<p>Here's some of the unlimited you get at GoodCloud:
 			<ul>
 				<li>Unlimited number of users</li>
 				<li>Unlimited number of contacts</li>
@@ -67,6 +67,7 @@
 				<li>No treating you like a dollar sign.</li>
 			</ul>
 			</p>
+			You're real people, doing real good in the world. We promise to treat you that way.
 	</div>
 
 	<div class="tab_content" id="free_tour">
