--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -20,88 +20,88 @@
 	<div class="tab_content company" id="everything_in_one_place">
 		<div class="page_top_hook">Contacts, Donations, and Volunteers, all in one place.</div>
 		<div class="row">
-				Many small nonprofits have their information scattered across a number of systems: there's the contacts program, the volunteer log (paper or spreadsheet), the donors program, and the various lists of participants, major donors, and the people who are coming to Thursday's event.  Wouldn't it be nice if there was one place for all that information? Well, there is.
-
-				img
-
-				With GoodCloud, all of your nonprofit's core information has one home, accessible from anywhere. Even better, the information is actually <i>connected</i>. If you've ever wondered how many of your volunteers are also donors, you can now have that answer. 
-
-				If you've ever struggled with who has the latest version of a volunteer list, you can leave that headache behind. With GoodCloud, all of your lists are kept up to date in real-time.  We don't like headaches. We figure you don't either.
-
-				<div class="feature find_fast">
-					<div class="title">Find people fast</div>
-					<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
-			Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</div>
-				</div>
 				
-				<div class="feature full_contact">
-					<div class="title">Full contact information </div>
-					<div class="description png_bg identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
-				</div>
-				</div>
-				<div class="row">
-				
-				<div class="feature groups">
-					<div class="title">Organize people the way you work</div>
-					<div class="description png_bg identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
-				</div>
-				
-				<div class="feature volunteer">
-					<div class="title">Track volunteer hours</div>
-					<div class="description png_bg identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
-				</div>
+				<div class="centered_block"><img src="{% media_url "images/marketing-headache_vs_simple.png" %}" /></div>
+
+				<p>Many small nonprofits have their information scattered across a number of systems: there's the contacts program, the volunteer log, the donors program, and the various lists of participants, major donors, and the people who are coming to Thursday's event.  </p>
+
+				<p>Wouldn't it be nice if there was one place for all that information? Well, now there is.</p>
+
+
+
+				<p>With GoodCloud, all of your nonprofit's core information has one home, accessible from anywhere. Even better, the information is actually <i>connected</i>. If you've ever wondered how many of your volunteers are also donors, you can now have that answer. </p>
+
+				<p>If you've ever struggled with who has the latest version of a volunteer list, you can leave that headache behind. With GoodCloud, all of your lists are kept up to date in real-time.  We don't like headaches. We figure you don't either.</p>
+
 		</div>
 	</div>
 	<div class="tab_content company" id="know_your_people">
 		<div class="page_top_hook">Never forget a birthday. Or a conversation.</div>
-Goodcloud makes it easy for you to know each of your people. People like:
-John, a donor, who
-Sara, the dev dir talked to on april 14th of this year, about our upcoming fundraiser.  John has just moved into a new house.
-John has given 6 times in the past year, totalling $8,150 
-His twitter feed is @johnsmith, and he’s been writing recently about his boy’s football team.
-Sara has a follow-up call scheduled for August 21
-Cindy, a volunteer
-Cindy has been trained to work with youth and seniors
-She’s a part of the first tuesdays volunteer group
-She’s donated once per year for the last four years
-She’s available tuesdays, thursdays, and sundays
-Will, a participant
-Will has been involved with our organization for two years.
-He participated in the spring 2011 and fall 2011 sessions.
-Will has been a group leader.
-Will is interested in the spring 2012 session.
-Will made a $30 donation after the spring 2011 session.
-
-
-		Nonprofit staff are simply amazing at remembering people, faces, and interactions.  But wouldn't it be nice to not have to ask the development director about the last call before sending an email? 
-
-		With GoodCloud, it's easy to record the interactions you have with all the people your organizations touches. When the phone rings, you can be on the same page in a matter of seconds.
-
-
-		<div class="row">
-			<div class="feature donations">
-				<div class="title">Easily record donations</div>
-				<div class="description png_bg identical_height_block">Enter a donation once, then easily make reports and view summary statistics. Now it's easy to keep track of where the funding comes from, and plan for the future.</div>
+		<p>Goodcloud makes it easy for you to know each of your people. People like:</p>
+		<div id="example_people" class="tabs">
+			<div class="example_people_navigation">
+			<ul>
+				<li><a href="#john" class="example_person_link john">John</a></li>
+				<li><a href="#cindy" class="example_person_link cindy">Cindy</a></li>
+				<li><a href="#will" class="example_person_link will">Will</a></li>
+			</ul>
 			</div>
-
-		<!--	<div class="feature thank_you_letters">
-				<div class="title">Thank you letters</div>
-				<div class="description png_bg identical_height_block">Create fields that fit your mission
-		Every nonprofit is different - that’s why we’ve made it easy to set your own categories and tags for people, and integrated them throughout GoodCloud.</div>
-			</div> 
-		-->
-			<div class="feature custom_tags">
-				<div class="title">Make your own tags</div>
-				<div class="description png_bg identical_height_block">Every nonprofit is different - that’s why we’ve made it easy to make your own categories and tags for people, and integrated your custom tags throughout GoodCloud.</div>
+			<div class="person_detail" id="john">
+				<div class="name_and_role">
+					<div class="name">John</div>
+					<div class"role">Donor</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>John has given 6 times in the past year, totalling $8,150.</li>
+						<li>Sara, the development director talked to John on April 14th of this year about our upcoming fundraiser.  John was interested in making a donation. He also just moved into a new house.</li>
+						<li>His twitter feed is @johnsmith, and he’s been writing recently about his boy’s football team.</li>
+						<li>Sara has a follow-up call scheduled for August 21.</li>
+					</ul>
+				</div>
 			</div>
-
+			<div class="person_detail" id="cindy">
+				<div class="name_and_role">
+					<div class="name">Cindy</div>
+					<div class"role">Volunteer</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Cindy has been trained to work with youth and seniors.</li>
+						<li>She’s a part of the first Tuesdays volunteer group.</li>
+						<li>She’s donated once per year for the last four years.</li>
+						<li>She’s available Tuesdays, Thursdays, and Sundays.</li>
+						<li>She turns 50 on September 11th.</li>
+					</ul>
+				</div>
+			</div>
+			<div class="person_detail" id="will">
+				<div class="name_and_role">
+					<div class="name">Will</div>
+					<div class"role">Participant</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Will has been involved with our organization for two years.</li>
+						<li>He participated in the Spring 2011 and Fall 2011 sessions.</li>
+						<li>Will has been a group leader.</li>
+						<li>Will is interested in the Spring 2012 session.</li>
+						<li>Will made a $30 donation after the Spring 2011 session.</li>
+					</ul>
+				</div>
+			</div>
 		</div>
+
+		<p>Nonprofit staff are simply amazing at remembering people, faces, and interactions.  But wouldn't it be nice to not have to ask the development director about the last call before sending an email? </p>
+
+		<p>With GoodCloud, it's easy to record the interactions you have with all the people your organizations touches. When the phone rings, you can be on the same page in a matter of seconds.</p>
+
 	</div>
 	<div class="tab_content company" id="save_money">
 		<div class="page_top_hook">Costs less than the competitors.</div>
 		<div class="row">
 		<div class="feature spreadsheet">
-			
+
 Stop paying for servers, software upgrades, and IT help.
 One system - no separate costs for donors, volunteers, and contact management
 Priced to fit in a small nonprofit’s budget
