know your people page looks good.

--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -38,32 +38,33 @@
 	<div class="tab_content company" id="know_your_people">
 		<div class="page_top_hook">Never forget a birthday. Or a conversation.</div>
 		<p>Goodcloud makes it easy for you to know each of your people. People like:</p>
+
 		<div id="example_people" class="tabs">
 			<div class="example_people_navigation">
 			<ul>
-				<li><a href="#john" class="example_person_link john">John</a></li>
-				<li><a href="#cindy" class="example_person_link cindy">Cindy</a></li>
-				<li><a href="#will" class="example_person_link will">Will</a></li>
+				<li><a href="#john" class="example_person_link john"><div class="name">John</div><div class="role">Donor</div></a></li>
+				<li><a href="#cindy" class="example_person_link cindy"><div class="name">Cindy</div><div class="role">Volunteer</div></a></li>
+				<li><a href="#will" class="example_person_link will"><div class="name">Will</div><div class="role">Participant</div></a></li>
 			</ul>
 			</div>
 			<div class="person_detail" id="john">
 				<div class="name_and_role">
 					<div class="name">John</div>
-					<div class"role">Donor</div>
+					<div class="role">Financial Advisor</div>
 				</div>
 				<div class="details">
 					<ul>
 						<li>John has given 6 times in the past year, totalling $8,150.</li>
-						<li>Sara, the development director talked to John on April 14th of this year about our upcoming fundraiser.  John was interested in making a donation. He also just moved into a new house.</li>
-						<li>His twitter feed is @johnsmith, and he’s been writing recently about his boy’s football team.</li>
-						<li>Sara has a follow-up call scheduled for August 21.</li>
+						<li>Sara, our development director talked to John on April 14th about our upcoming fundraiser.  John was interested in making a donation. He also just moved into a new house.</li>
+						<li>His twitter feed is @johnsmith, and he’s been writing recently about his son's football team.</li>
+						<li>Sara has a follow-up call scheduled for July 21.</li>
 					</ul>
 				</div>
 			</div>
 			<div class="person_detail" id="cindy">
 				<div class="name_and_role">
 					<div class="name">Cindy</div>
-					<div class"role">Volunteer</div>
+					<div class="role">Photographer</div>
 				</div>
 				<div class="details">
 					<ul>
@@ -71,14 +72,14 @@
 						<li>She’s a part of the first Tuesdays volunteer group.</li>
 						<li>She’s donated once per year for the last four years.</li>
 						<li>She’s available Tuesdays, Thursdays, and Sundays.</li>
-						<li>She turns 50 on September 11th.</li>
+						<li>She turns 50 on September 28th.</li>
 					</ul>
 				</div>
 			</div>
 			<div class="person_detail" id="will">
 				<div class="name_and_role">
 					<div class="name">Will</div>
-					<div class"role">Participant</div>
+					<div class="role">Waiter</div>
 				</div>
 				<div class="details">
 					<ul>
@@ -90,7 +91,9 @@
 					</ul>
 				</div>
 			</div>
+			
 		</div>
+		
 
 		<p>Nonprofit staff are simply amazing at remembering people, faces, and interactions.  But wouldn't it be nice to not have to ask the development director about the last call before sending an email? </p>
 
