--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -909,31 +909,83 @@ social_links {
 
 #example_people {
 	display: block;
+	
+	background: url("../images/marketing-text-back-contrast-background.jpg");
+	border-radius: 		8px;
+	-moz-border-radius: 8px;
+	box-shadow: 		1px 1px 2px rgba(0,0,0,0.35);
+  	-moz-box-shadow:	1px 1px 2px rgba(0,0,0,0.35);
+  	-khtml-box-shadow: 	1px 1px 2px rgba(0,0,0,0.35);
+  	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.35);
+  	padding: 0px;
+  	margin: 10px 0px 20px 0px;
 }
-#example_people .example_people_navigation, #example_people .ui-widget-header {
+#example_people .example_people_navigation {
 	display: block;
 	position: relative;
 	overflow: hidden;
-	border: 0px solid #222;
-	background: url("../images/marketing-footer-back.jpg")
+	border: 1px solid #b8ab7e;
+	border-width: 0px 0px 1px 0px;
+	background: url("../images/marketing-text-back-contrast-highlight-background.jpg");
+	border-top-right-radius: 8px;
+  	-moz-border-radius-topright: 8px;
+  	border-top-left-radius: 8px;
+  	-moz-border-radius-topleft: 8px;
+  	padding: 5px 0px 0px 0px;
 }
-
-#example_people .example_people_navigation li, #example_people .ui-state-active, #example_people .ui-widget-content #example_people .ui-state-active, #example_people .ui-widget-header .ui-state-active {
-	width: 33%;
-	display: block;
-	float: left;
-	margin: 0px;
+#example_people .ui-widget-header, #example_people .person_detail {
 	background: none;
 	border: 0px;
+	padding: 0px;
+	margin: 0px;
+}
+#example_people .example_people_navigation li {
+	width: 30%;
+	display: block;
+	margin: 0px 0px 0px 2%;
+	background: none;
+	border: 0px;
+	padding: 0px;
 	border-radius: 		0px;
 	-moz-border-radius: 0px;
+	font-weight: normal;
+	color: #454545;
+	text-align: center;
+	position: relative;
 }
+#example_people .example_people_navigation li .link_wrapper {
+	display: block;
+	width: 100%;
+	text-align: center;
+}
+#example_people .example_people_navigation li.ui-state-active {
+	background: url("../images/marketing-text-back-contrast-background.jpg");
+}
+
 #example_people .example_person_link {
 	background: none;
 	background-repeat: no-repeat;
-	padding-left: 80px;
-	
-	height: 50px;
+	background-position: 5px 50%;
+	padding: 0px 10px 0px 0px;
+	height: 80px;
+	font-size: 40px;
+	text-align: left;
+	display: block;
+	width: auto;
+	color: #524a2e;
+}
+#example_people .example_person_link .name { 
+	padding: 10px 0px 0px 0px;
+	line-height: 40px;
+
+}
+#example_people .example_person_link .role, #example_people .example_person_link .name {
+	margin-left: 90px;
+}
+#example_people .example_person_link .role {
+	font-size: 16px;
+	padding-left: 2px;
+	color: #766b43;
 }
 #example_people .person_detail {
 	width: 100%;
@@ -944,29 +996,36 @@ social_links {
 	padding-top: 130px;
 	width: 120px;
 	float: left;
-	margin: 0px 40px 20px 0px;
+	margin: 20px 40px 20px 20px;
 	text-align: center;
+	
 }
 #example_people .name_and_role .name {
 	font-size: 28px;
 }
+#example_people .name_and_role .role {
+	line-height: 18px;
+}
+#example_people .person_detail .details {
+	padding: 20px 15px 0px 0px;
+}
 
 #example_people .example_person_link.john {
-	background-image: url("../images/marketing-john-70.jpg");
+	background-image: url("../images/marketing-john-70.png");
 }
 #example_people .example_person_link.cindy {
-	background-image: url("../images/marketing-cindy-70.jpg");
+	background-image: url("../images/marketing-cindy-70.png");
 }
 #example_people .example_person_link.will {
-	background-image: url("../images/marketing-will-70.jpg");
+	background-image: url("../images/marketing-will-70.png");
 }
 
 #example_people #john .name_and_role {
-	background-image: url("../images/marketing-john-120.jpg");
+	background-image: url("../images/marketing-john-120.png");
 }
 #example_people #cindy .name_and_role {
-	background-image: url("../images/marketing-cindy-120.jpg");
+	background-image: url("../images/marketing-cindy-120.png");
 }
 #example_people #will .name_and_role {
-	background-image: url("../images/marketing-will-120.jpg");
+	background-image: url("../images/marketing-will-120.png");
 }
