psds and text tweak

--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -25,7 +25,7 @@
 
 				<p>Many small nonprofits have their information scattered across a number of systems: there's the contacts program, the volunteer log, the donors program, and the various lists of participants, major donors, and the people who are coming to Thursday's event.  </p>
 
-				<p>Wouldn't it be nice if there was one place for all that information? Well, now there is.</p>
+				<p>Wouldn't it be nice if there was one place for all that information? Now, there is.</p>
 
 
 
