--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -102,134 +102,97 @@
 	</div>
 	<div class="tab_content company" id="save_money">
 		<div class="page_top_hook">Costs less than the competitors.</div>
-		<div class="row">
-		<div class="feature spreadsheet">
+		
 
-Stop paying for servers, software upgrades, and IT help.
-One system - no separate costs for donors, volunteers, and contact management
-Priced to fit in a small nonprofit’s budget
-how we got our price
-No lock-in
-Your time isn’t free.  Spend time fundraising, leveraging volunteer hours, and directly working on your mission instead of typing and clicking.
+			<div class="feature groups">
+				<div class="title">No lock-in.</div>
+				<div class="description png_bg identical_height_block">
+					<p>GoodCloud is a monthly subscription. No set-up fees, no cancellation fees, no lock-in.  We've also made it easy to get your data in and out.</p>
+					<p>Our thinking is simple - we want to provide the best solution for small nonprofits, at the lowest cost. If we're not the best and cheapest, we hope you go somewhere else.</p>
+				</div>
+			</div>
 
-			<div class="title">Sometimes, you just need a spreadsheet.</div>
-			<div class="description png_bg identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
-		</div>
 
-		<div class="feature data_import">
-			<div class="title">Bring your data with you</div>
-			<div class="description png_bg identical_height_block">You’ve got a system you’re using right now, and there’s no way we’d ask you to type everything in again. Our advanced data import tool makes it a snap to bring your current data into GoodCloud.</div>
-		</div>
-		</div>
+			<div class="feature cloud">
+				<div class="title">No more servers.</div>
+				<div class="description png_bg identical_height_block">The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of the costs and time of managing the servers - and leave you time and money to focus on your mission.</div>
+			</div>
 
+			<div class="feature donations">
+				<div class="title">Priced around actual small nonprofit budgets.</div>
+				<div class="description png_bg identical_height_block">When we started GoodCloud, we interviewed small nonprofits to see what they were paying for their software needs. Then we took the smallest number we heard, and cut it in half. We believe that small nonprofits should have access to great software at a price they can afford.</div>
+			</div>
 	</div>
+
 	<div class="tab_content company" id="less_computer_time">
 		<div class="page_top_hook">Every minute at the computer is a minute away from your mission. Spend fewer of them.</div>
-Unless your mission involves computers, chances are you'd rather not be staring at one.  One of our core goals in designing GoodCloud was to make the processes nonprofits do dozens of times a day really fast. Things like looking up a phone number or email, or printing a mailing label.  We've made it as quick and simple as possible to common tasks, so you can get in, get the information you need, and get on with your day.
 
-		<div class="row">
-
-		<div class="feature support">
-			<div class="title">Real-people support</div>
-			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
-	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
-		</div>
-		<div class="feature cloud">
-				<div class="title">We just keep getting better.</div>
-
-				<div class="description png_bg identical_height_block">No more servers.
-		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
-		</div>
-
-		</div>
-
-		<div class="row">
-			<div class="feature more_to_come">
-				<div class="title">We're not done yet</div>
-				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+			<div class="feature find_fast">
+				<div class="title">Find people fast.</div>
+				<div class="description png_bg identical_height_block">
+					<p>We've got the fastest, easiest contact lookup on this side of the galaxy. Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</p>
+				</div>
 			</div>
-			<div class="">
 
+
+			<div class="feature glasses">
+				<div class="title">Get away from the screen.</div>
+				<div class="description png_bg identical_height_block">
+					<p>Unless your mission involves computers, chances are you'd rather not be staring at one.</p>
+		
+					<p>One of our core goals in designing GoodCloud was to make the processes nonprofits do dozens of times a day really fast. Things like looking up an address or email, or printing a mailing label.  We've made it as quick and simple as possible to common tasks, so you can get in, get the information you need, and get on with your day.</p>
+				</div>
 			</div>
-		</div>
+
+		
+
 
 	</div>
 	<div class="tab_content company" id="gets_younger">
 		
 		<div class="page_top_hook">Software that gets better with time - for free.</div>
 
-Cloud based
-As GoodCloud keeps growing and improving, those features are rolled out for free
-
-		<div class="row">
-
-
-		<div class="feature support">
-			<div class="title">Real-people support</div>
-			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
-	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
-		</div>
-		<div class="feature cloud">
-				<div class="title">We're on the Cloud</div>
-				<div class="description png_bg identical_height_block">No more servers.
-		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
-		</div>
-
-		</div>
-
-		<div class="row">
 			<div class="feature more_to_come">
-				<div class="title">We're not done yet</div>
+				<div class="title">We're not done yet.</div>
 				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
 			</div>
-			<div class="">
 
+			<div class="feature data_import">
+				<div class="title">Free upgrades.</div>
+				<div class="description png_bg identical_height_block">
+				<p>One of the big advantages of cloud-based software is that we can upgrade GoodCloud and you get the new features instantly.  We believe that ongoing improvements are a part of what makes great software, and we're committed to delivering those upgrades to our customers, free of charge.  </p>
+
+				<p>If this sounds different than yearly upgrade fees, downloads, and installations, it is. <a href="{% url marketing_site:about_us  %}">We do things a bit differently here</a>, and we think you'll love it.</p></div>
 			</div>
-		</div>
+
 
 	</div>
 	<div class="tab_content company" id="secure">
 		
 		<div class="page_top_hook">Secure access, constant backups.</div>
 
-The page you're looking at right now? It's secure.  Just like every page in GoodCloud. We've made the security and integrity of your data one of our key concerns, and you can rest well knowing you're in good hands. 
+			<div class="feature keychain">
+				<div class="title">Secure.</div>
+				<div class="description png_bg identical_height_block">
+				<p>The page you're looking at right now? It's secure.  Just like every page in GoodCloud. We've made the security and integrity of your data one of our key concerns, and you can rest well knowing you're in good hands. </p>
 
-SSL
-PCI compliant datacenters
-
-Constant backups
-
-
-		<div class="row">
-
-
-		<div class="feature support">
-			<div class="title">Real-people support</div>
-			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
-	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
-		</div>
-		<div class="feature cloud">
-				<div class="title">We're on the Cloud</div>
-				<div class="description png_bg identical_height_block">No more servers.
-		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
-		</div>
-
-		</div>
-
-		<div class="row">
-			<div class="feature more_to_come">
-				<div class="title">We're not done yet</div>
-				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+				<p>All customer data is hosted in <a href="http://aws.amazon.com/security/" target="_blank">PCI DSS Level 1 datacenters</a>, and industry-standard practices are used throughout GoodCloud to ensure that your data is safe and secure.</p>
+				</div>
 			</div>
-			<div class="">
 
+			
+			<div class="feature shield">
+				<div class="title">We even backup the backups.</div>
+				<div class="description png_bg identical_height_block">
+					<p>We maintain constant backups of everything in GoodCloud, 24/7.  That includes multiple backups outside our datacenter, ready for a worst-case scenario.  When it comes to keeping your data safe, we don't take any chances, or cut any corners.</p>
+				</div>
 			</div>
-		</div>
+
 
 	</div>		
 </div>
 
-<a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud today!</a>
+<a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud for Free!</a>
 <div class="clearfix"></div>
 
 {% endblock %}
