pricing page looks solid

--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -24,15 +24,29 @@
 	<div class="tab_content" id="price">
 			<div class="page_top_hook">We like to keep things simple.</div>
 
-			
-			GoodCloud is just 50 dollars a month.  
+			<div class="feature no_icon">
+				<div class="title">One simple price.</div>
+				<div class="description png_bg identical_height_block">
+				GoodCloud is just 50 dollars a month.  
 			<br/>
 			<br/>No strings, no contracts, no hidden fees. Everything included.
 
-			<div class="feature why_50">
-					<div class="title">Why $50?</div>
-			
-					When we started GoodCloud, we interviewed small nonprofits to see what they were paying for their software needs.  Then we took the smallest number we heard, and cut it in half.  We believe that small nonprofits should have access to great software at a price they can afford. 
+				</div>
+			</div>
+
+			<div class="feature no_icon">
+				<div class="title">One radical concept.</div>
+				<div class="description png_bg identical_height_block">
+					<p>Our pricing is based on a radical concept: <i>we want to help you grow</i>.  </p>
+
+					<p>Other companies watch you bringing in a new staff member and see dollar signs.  We see you succeeding, and cheer. </p>
+
+					<p>Other services see you reaching more donors and volunteers, and see dollar signs. We say, "Add some more!" </p>
+					
+					<p> We've built a sustainable business <a href="{% url marketing_site:about_us %}">that we love</a> on those $50 a month - and we're happy with that.  What we really want is a better world, and you're the key to making that happen.  You have our full support.</p>
+
+
+				</div>
 			</div>
 
 			
@@ -40,11 +54,7 @@
 
 	<div class="tab_content" id="everything_included">
 			<div class="page_top_hook">Batteries included.</div>
-			<p>Our pricing is based on a radical concept: <i>we want to help you grow</i>.  </p>
-
-			<p>Other companies watch you bringing in a new staff member and see dollar signs.  We see you succeeding, and cheer. </p>
-
-			<p>Other services see you reaching more donors and volunteers, and see dollar signs. We say, "Add some more!"  We've built a <a href="{% url marketing_site:about_us %}">sustainable business that we love</a> on those $50 a month - and we're happy with that.  What we really want is a better world, and you're the key to making that happen.  You have our full support.</p>
+			<p>We believe you should have a simple, consistent cost you can count on. We know nonprofit budgets are usually fixed, and always tight. That's why you won't find extra fees or hidden charges here.  Just easy, unlimited use.</p>
 
 			<p>Here's some of the unlimited you get at GoodCloud:
 			<ul>
