--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -21,35 +21,27 @@
 			{# <iframe class="video_box" width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe> #}
 			{# <img src="{% media_url "images/video-coming-soon.png" %}"/> #}
 			</div>
+			<p>Watch the video above to see a quick interview with one of our co-founders, and a look around GoodCloud. We'll go through people, addresses, donations, volunteer shifts, tags, and groups - in under three minutes! Whew!</p>
 
 	</div>
 	<div class="tab_content company" id="pictures_and_words">
 		<div class="page_top_hook">More than just some pretty screenshots.</div>
-		<div class="row">
-			{# GoodCloud is a database and operations suite for small nonprofits.  #}		
-				<div class="feature find_fast">
-					<div class="title">Find people fast</div>
-					<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
-			Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</div>
-				</div>
-				
-				<div class="feature full_contact">
-					<div class="title">Full contact information </div>
-					<div class="description png_bg identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
-				</div>
-				</div>
-				<div class="row">
-				
-				<div class="feature groups">
-					<div class="title">Organize people the way you work</div>
-					<div class="description png_bg identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
-				</div>
-				
-				<div class="feature volunteer">
-					<div class="title">Track volunteer hours</div>
-					<div class="description png_bg identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
-				</div>
-		</div>
+
+		<p>Here's a few pages from within GoodCloud. Of course, the best way to experience them is to <a href="{% url accounts:signup %}">sign up for a free trial!</a>  No risk, no credit card, nada.  We invite you to see these screens with your own donors and volunteers, and see if GoodCloud really isn't the easiest solution you've used.</p>
+
+		Screenshots:
+		Top bar search
+		People view
+		People edit
+		add volunteer shift
+		add donation
+		tags
+		manage tags
+		group list
+		group edit
+		spreadsheet edit
+		admin
+
 	</div>
 </div>	
 
