--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -475,8 +475,9 @@ social_links {
 	padding: 5px 10px 10px 60px;
 	
 	color: #454545;
-
-	
+}
+.features .feature.no_icon .description {
+	padding: 5px 10px 10px 0px;
 }
 .features .feature.find_fast 			.description { 	background-image: url("../images/icons/Zoom.png"); 				}
 .features .feature.full_contact 		.description { 	background-image: url("../images/icons/Contacts2.png");  		}
