tweak to pricing

--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -83,7 +83,7 @@
 	<div class="tab_content" id="free_tour">
 			<div class="page_top_hook">See for yourself.</div>
 
-			When you sign up for a GoodCloud account, your first 30 days are on us.  We'll be in touch throughout those 30 days to see if you have questions, and to learn a bit more about you and your organization.  You know, like real people do.
+			<p>When you sign up for a GoodCloud account, your first 30 days are on us.  We'll be in touch throughout those 30 days to see if you have questions, and to learn a bit more about you and your organization. You know, like real people do.</p>
 	</div>
 
 
