--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -69,12 +69,12 @@
 			</p>
 
 			<p>
-			Here's what else we won't do:
+			Here's what we won't do:
 			<ul>
-				<li>No charge for support</li>
-				<li>No call center halfway across the world</li>
-				<li>No sudden price changes</li>
-				<li>No treating you like a dollar sign.</li>
+				<li>We won't charge for support</li>
+				<li>We won't have a call center halfway across the world</li>
+				<li>We won't change the price suddenly</li>
+				<li>We won't treat you like a dollar sign.</li>
 			</ul>
 			</p>
 			You're real people, doing real good in the world. We promise to treat you that way.
